添加权限认证

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,11 @@ mysql_password=gz_eds
 sqlserver_url=jdbc:sqlserver://14.23.92.186:32533;DatabaseName=AppFabric  
 sqlserver_username=local_develop
 sqlserver_password=BG!@#$%^987
-
 #rabbit config
 spring.rabbitmq.host=192.168.237.128
 #warning don't setting port to default port 15672
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+#auth valid
+app.server.secret=123456
