--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,8 @@ sqlserver_url=jdbc:sqlserver://14.23.92.186:32533;DatabaseName=AppFabric
 sqlserver_username=local_develop
 sqlserver_password=BG!@#$%^987
 #rabbit config
-spring.rabbitmq.host=192.168.237.128
-#warning don't setting port to default port 15672
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+rabbit.address=192.168.237.128:5672
+rabbit.username=guest
+rabbit.password=guest
 #auth valid
 app.server.secret=123456
