add restful service and process business logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ rabbit.username=guest
 rabbit.password=guest
 #auth valid
 app.server.secret=123456
+#rest time out setting
+rest.connection.connection-request-timeout=3000
+rest.connection.connect-timeout=3000
+rest.connection.read-timeout=3000
